# mlops-mlfow-gcp

./: Dockerfile  Jenkinsfile  README.md  application.py  main.py  pyproject.toml  requirements.txt  requirements_backup.txt
artifacts/models/: lgbm_model.pkl
config/: config.yaml
pipeline/: training_pipeline.py
src/: data_ingestion.py  data_preprocessing.py  model_training.py  sample_app.py
